; ModuleID = '/home/carl/AnghaBench/git/extr_archive.c_reject_entry.c'
source_filename = "/home/carl/AnghaBench/git/extr_archive.c_reject_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32, i32 }
%struct.object_id = type { i32 }
%struct.path_exists_context = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@READ_TREE_RECURSIVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.object_id*, %struct.strbuf*, i8*, i32, i32, i8*)* @reject_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reject_entry(%struct.object_id* %0, %struct.strbuf* %1, i8* %2, i32 %3, i32 %4, i8* %5) #0 {
  %7 = alloca %struct.object_id*, align 8
  %8 = alloca %struct.strbuf*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.path_exists_context*, align 8
  %15 = alloca %struct.strbuf, align 4
  store %struct.object_id* %0, %struct.object_id** %7, align 8
  store %struct.strbuf* %1, %struct.strbuf** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i8* %5, i8** %12, align 8
  store i32 -1, i32* %13, align 4
  %16 = load i8*, i8** %12, align 8
  %17 = bitcast i8* %16 to %struct.path_exists_context*
  store %struct.path_exists_context* %17, %struct.path_exists_context** %14, align 8
  %18 = load i32, i32* %10, align 4
  %19 = call i64 @S_ISDIR(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %46

21:                                               ; preds = %6
  %22 = bitcast %struct.strbuf* %15 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %22, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  %23 = load %struct.strbuf*, %struct.strbuf** %8, align 8
  %24 = call i32 @strbuf_addbuf(%struct.strbuf* %15, %struct.strbuf* %23)
  %25 = load i8*, i8** %9, align 8
  %26 = call i32 @strbuf_addstr(%struct.strbuf* %15, i8* %25)
  %27 = load %struct.path_exists_context*, %struct.path_exists_context** %14, align 8
  %28 = getelementptr inbounds %struct.path_exists_context, %struct.path_exists_context* %27, i32 0, i32 1
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.path_exists_context*, %struct.path_exists_context** %14, align 8
  %35 = getelementptr inbounds %struct.path_exists_context, %struct.path_exists_context* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %15, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %15, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @match_pathspec(i32 %33, i32* %35, i32 %37, i32 %39, i32 0, i32* null, i32 1)
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %44, label %42

42:                                               ; preds = %21
  %43 = load i32, i32* @READ_TREE_RECURSIVE, align 4
  store i32 %43, i32* %13, align 4
  br label %44

44:                                               ; preds = %42, %21
  %45 = call i32 @strbuf_release(%struct.strbuf* %15)
  br label %46

46:                                               ; preds = %44, %6
  %47 = load i32, i32* %13, align 4
  ret i32 %47
}

declare dso_local i64 @S_ISDIR(i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @strbuf_addbuf(%struct.strbuf*, %struct.strbuf*) #1

declare dso_local i32 @strbuf_addstr(%struct.strbuf*, i8*) #1

declare dso_local i32 @match_pathspec(i32, i32*, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @strbuf_release(%struct.strbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
